[gd_scene load_steps=11 format=3 uid="uid://dhh7shqfkqpf3"]

[ext_resource type="Script" uid="uid://c0ftg2e34ygnw" path="res://Entities/UI/purchase_selection_panel.gd" id="1_8ae43"]
[ext_resource type="Texture2D" uid="uid://bd4s1sqjw7oh2" path="res://Assets/Textures/ShipIcons/speeder.png" id="1_hlcg7"]
[ext_resource type="Texture2D" uid="uid://dffabuixqhk08" path="res://Assets/Textures/ShipIcons/combat_ship.png" id="2_8ae43"]
[ext_resource type="Texture2D" uid="uid://chp7dmvm2orce" path="res://Assets/Textures/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_11.png" id="3_k2uhh"]
[ext_resource type="Texture2D" uid="uid://s770i2ebduo" path="res://Assets/Textures/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_17.png" id="4_fsi7h"]
[ext_resource type="Texture2D" uid="uid://v42h8gphx7ke" path="res://Assets/Textures/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_32.png" id="5_7qont"]
[ext_resource type="Texture2D" uid="uid://b51r13lskf28b" path="res://Assets/Textures/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_38.png" id="6_d18px"]
[ext_resource type="Texture2D" uid="uid://dd0feheyfeadt" path="res://Assets/Textures/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/10/Skillicon10_06.png" id="7_hlcg7"]
[ext_resource type="PackedScene" uid="uid://dgq5x5jw0sjex" path="res://Entities/UI/player_cursor.tscn" id="9_k2uhh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlcg7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[node name="PurchaseSelectionPanel" type="Panel"]
custom_minimum_size = Vector2(960, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -64.0
offset_right = 480.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hlcg7")
script = ExtResource("1_8ae43")
player_cursor = ExtResource("9_k2uhh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="speeder" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_hlcg7")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/speeder"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="combat_ship" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_8ae43")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/combat_ship"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="repair_station" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_k2uhh")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/repair_station"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="geo_repair_station" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_fsi7h")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/geo_repair_station"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="technology_institute" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_7qont")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/technology_institute"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="bank" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_d18px")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/bank"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="none" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_hlcg7")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/none"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -56.0
offset_right = 49.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_top = -92.0
offset_right = 28.5
offset_bottom = -23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
